// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 jXbNmb"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kVbVwI"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 jXbNmb"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kVbVwI"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 iYJwJU"
>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 jXbNmb"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kVbVwI"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 gHwFSP"
  >
    <p
      class="card__Title-s87lnr-0 kUjNdn"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 iqDGmA"
    >
      <div
        class="card__Item-s87lnr-8 jXbNmb"
      >
        <img
          class="card__Image-s87lnr-7 jddFU"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 kVbVwI"
        >
          <p
            class="card__SubTitle-s87lnr-3 gbbwjH"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 imJwNe"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card renders the Card with and toggles the card features 1`] = `
<div
  class="card__GroupS-avlui4-2 bggKgV"
>
  <div
    class="card__ContainerS-avlui4-1 ejXBfh"
  >
    <p
      class="card__TitleS-avlui4-0 juVbVM"
    >
      Documentaries
    </p>
    <div
      class="card__EntitiesS-avlui4-12 ggLqDn"
    >
      <div
        class="card__ItemS-avlui4-13 eAqNhV"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__ImageS-avlui4-14 cPJswD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__MetaS-avlui4-11 idHuQP"
        >
          <p
            class="card__SubTitleS-avlui4-3 bcgcGy"
          >
            Tiger King
          </p>
          <p
            class="card__TextS-avlui4-4 bMYrFb"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__ContainerS-avlui4-1 ejXBfh"
  >
    <p
      class="card__TitleS-avlui4-0 juVbVM"
    >
      Feel Good
    </p>
    <div
      class="card__EntitiesS-avlui4-12 ggLqDn"
    >
      <div
        class="card__ItemS-avlui4-13 eAqNhV"
        data-testid="juno-item-feature"
      >
        <img
          class="card__ImageS-avlui4-14 cPJswD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__MetaS-avlui4-11 idHuQP"
        >
          <p
            class="card__SubTitleS-avlui4-3 bcgcGy"
          >
            Juno
          </p>
          <p
            class="card__TextS-avlui4-4 bMYrFb"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card renders the Card with populated data 1`] = `
<div
  class="card__GroupS-avlui4-2 bggKgV"
>
  <div
    class="card__ContainerS-avlui4-1 ejXBfh"
  >
    <p
      class="card__TitleS-avlui4-0 juVbVM"
    >
      Documentaries
    </p>
    <div
      class="card__EntitiesS-avlui4-12 ggLqDn"
    >
      <div
        class="card__ItemS-avlui4-13 eAqNhV"
      >
        <img
          class="card__ImageS-avlui4-14 cPJswD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__MetaS-avlui4-11 idHuQP"
        >
          <p
            class="card__SubTitleS-avlui4-3 bcgcGy"
          >
            Tiger King
          </p>
          <p
            class="card__TextS-avlui4-4 bMYrFb"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__ContainerS-avlui4-1 ejXBfh"
  >
    <p
      class="card__TitleS-avlui4-0 juVbVM"
    >
      Feel Good
    </p>
    <div
      class="card__EntitiesS-avlui4-12 ggLqDn"
    >
      <div
        class="card__ItemS-avlui4-13 eAqNhV"
      >
        <img
          class="card__ImageS-avlui4-14 cPJswD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__MetaS-avlui4-11 idHuQP"
        >
          <p
            class="card__SubTitleS-avlui4-3 bcgcGy"
          >
            Juno
          </p>
          <p
            class="card__TextS-avlui4-4 bMYrFb"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
